Set z-index: 1100 in shadow box, to hide bootstrap 'navbar-fixed-top'. Make refactor code according pep8.

--- a/bviewer/core/static/core/css/main.css
+++ b/bviewer/core/static/core/css/main.css
@@ -40,7 +40,7 @@ body {
 }
 
 .thumbnails {
-    margin-left: 0px;
+    margin-left: 0;
 }
 
 .thumbnails > li {
@@ -122,32 +122,3 @@ body {
 .control:hover .caption {
     opacity: 1;
 }
-
-/*.dropdown-menu {*/
-/*background-image: -moz-linear-gradient(top, #333333, #222222);*/
-/*background-image: -ms-linear-gradient(top, #333333, #222222);*/
-/*background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#333333), to(#222222));*/
-/*background-image: -webkit-linear-gradient(top, #333333, #222222);*/
-/*background-image: -o-linear-gradient(top, #333333, #222222);*/
-/*background-image: linear-gradient(top, #333333, #222222);*/
-/*}*/
-
-/*.navbar .dropdown-menu::after {*/
-/*content: '';*/
-/*display: inline-block;*/
-/*border-left: 6px solid transparent;*/
-/*border-right: 6px solid transparent;*/
-/*border-bottom: 6px solid #333;*/
-/*position: absolute;*/
-/*top: -6px;*/
-/*left: 10px;*/
-/*}*/
-
-/*.dropdown-menu a {*/
-/*color: #999;*/
-/*}*/
-
-/*.dropdown-menu .divider {*/
-/*background-color: #777777;*/
-/*border-bottom: 1px solid #666666;*/
-/*}*/
